create TriadAmsInputMediaPlayer entities for linked inputs

--- a/custom_components/triad_ams/translations/en.json
+++ b/custom_components/triad_ams/translations/en.json
@@ -16,6 +16,9 @@
         },
         "input_not_active": {
             "message": "Input {input} is not active"
+        },
+        "invalid_group_member": {
+            "message": "Entity {entity_id} is not a valid group member"
         }
     },
     "services": {
