feat: add async_get_joinable_group_members service for input media players
- Implements service to return all output entities that can join an input
- Includes unlinked Triad outputs and outputs linked to current input
- Intelligently discovers platform entities from linked player if GROUPING supported
- Attempts to use linked entity's async_get_joinable_group_members if available
- Falls back to manual platform discovery by filtering entity registry
- Only returns entities with speaker device_class
- Early exit when linked entity lacks GROUPING feature
- Added comprehensive test coverage with 9 test cases
- Updated services.yaml and translations for service discoverability
- Target entity restricted to receiver device_class input entities

--- a/custom_components/triad_ams/translations/en.json
+++ b/custom_components/triad_ams/translations/en.json
@@ -31,6 +31,10 @@
                     "description": "The media player entity to use as the input source."
                 }
             }
+        },
+        "get_joinable_group_members": {
+            "name": "Get Joinable Group Members",
+            "description": "Get all speaker entities that can join this input for grouping."
         }
     }
 }
