feat(media_player): rename to get_groupable_players and return {"result": [...]}
- Service: get_joinable_group_members -> get_groupable_players
- Method: async_get_joinable_group_members -> async_get_groupable_players
- Payload: switch to {result: [...]} per proposal
- Back-compat: call linked entity’s new method, fallback to legacy
- Update: services.yaml, icons.json, translations/en.json, README
- Tests: updated to new method + payload; 304 passed

--- a/custom_components/triad_ams/translations/en.json
+++ b/custom_components/triad_ams/translations/en.json
@@ -32,9 +32,9 @@
                 }
             }
         },
-        "get_joinable_group_members": {
-            "name": "Get Joinable Group Members",
-            "description": "Get all speaker entities that can join this input for grouping."
+        "get_groupable_players": {
+            "name": "Get Groupable Players",
+            "description": "Get all speaker entities that can group with this input."
         }
     }
 }
